syntax = "proto3";
package proto;

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/eloylp/aton/components/proto";

service Detector {
  rpc LoadCategories(LoadCategoriesRequest) returns (google.protobuf.Empty);
  rpc InformStatus(InformStatusRequest) returns (stream Status);
  rpc InformResults(google.protobuf.Empty) returns (stream Result);
  rpc AddTarget(AddTargetRequest) returns (google.protobuf.Empty);
  rpc RemoveTarget(RemoveTargetRequest) returns (google.protobuf.Empty);
}

message LoadCategoriesRequest {
  repeated string categories = 1;
  bytes image = 2;
}

message InformStatusRequest{
  google.protobuf.Duration interval = 1;
}

message Status {
  string description = 1;
  repeated Target targets = 2;
  TargetType detection_type = 3;
}

message Result {
  string target_uuid = 1;
  repeated string matches = 2;
  bool success = 3;
  google.protobuf.Timestamp recognized_at = 4;
}

message Target {
  string uuid = 1;
  string url = 2;
  TargetStatus status = 3;
  TargetType type = 4;
}

message AddTargetRequest {
  string target_uuid = 1;
  string target_url = 2;
  TargetType target_type = 3;
}

enum TargetType {
  TARGET_TYPE_FACE = 0;
  TARGET_TYPE_OBJECT = 1;
}

enum TargetStatus {
  TARGET_STATUS_OK = 0;
  TARGET_STATUS_CONNECTION_RETRY = 1;
}

message RemoveTargetRequest {
  string target_uuid = 1;
}

// gRPC Healthcheck protocol - https://github.com/grpc/grpc/blob/master/doc/health-checking.md
service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}